<resources>
    <string name="app_name">Ebbinghaus</string>
    <string name="add_new_record">添加新纪录</string>
    <string name="check_all_record">查看全部记录</string>
    <string name="delete">删除</string>
    <string name="content">内容：</string>
    <string name="please_input_your_content">请输入你的内容</string>

    <string name="set_date">设置日期：</string>
    <string name="exec_times">执行次数：</string>
    <string name="next_exec_time">下次时间：</string>
    <string name="id">ID：</string>
    <string name="ebbinghausMemoryDay_kel_file">cn.watcherman.ebbinghaus.ebbinghausMemoryDay</string>

</resources>
