<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
             xmlns:card_view="http://schemas.android.com/apk/res-auto"
             android:layout_width="match_parent"
             android:layout_height="wrap_content">
    <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            card_view:cardCornerRadius="3dp"
            android:layout_marginBottom="6dp"
            android:layout_marginTop="4dp"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            card_view:cardElevation="4dp"
            card_view:cardBackgroundColor="#22efff">
        <RelativeLayout android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:padding="6dp">
            <TextView style="@style/StringTextView"
                      android:id="@+id/string__ID"
                      android:text="@string/id"/>
            <TextView style="@style/TextView"
                      android:id="@+id/textView__ID"
                      android:layout_toRightOf="@id/string__ID"
                      android:layout_toEndOf="@id/string__ID"/>
            <TextView style="@style/StringTextView"
                      android:id="@+id/string_exec_times"
                      android:text="@string/exec_times"
            android:layout_below="@id/string__ID"/>
            <TextView style="@style/TextView"
                      android:id="@+id/textView_exec_times"
                      android:layout_below="@id/string__ID"
                      android:layout_toRightOf="@id/string_exec_times"
                      android:layout_toEndOf="@id/string_exec_times"/>
            <!--android:layout_alignBottom="@+id/string_exec_times"-->

            <TextView style="@style/StringTextView"
                      android:id="@+id/string_content"
                      android:text="@string/content"
                      android:layout_below="@id/string_exec_times"/>
            <TextView style="@style/TextView"
                      android:id="@+id/textView_content"
                      android:layout_below="@id/string_exec_times"
                      android:layout_toEndOf="@id/string_content"
                      android:layout_alignLeft="@id/textView_exec_times"
                      android:layout_alignStart="@id/textView_exec_times"
                      android:layout_toRightOf="@id/string_content"/>
        </RelativeLayout>
    </android.support.v7.widget.CardView>

</FrameLayout>