<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
             xmlns:card_view="http://schemas.android.com/apk/res-auto"
             android:layout_width="match_parent"
             android:layout_height="wrap_content">

    <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            card_view:cardCornerRadius="3dp"
            android:layout_marginBottom="6dp"
            android:layout_marginTop="4dp"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            card_view:cardElevation="4dp"
            card_view:cardBackgroundColor="#22efff">

        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:padding="6dp"
                android:orientation="vertical">

            <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:orientation="horizontal">

                    <TextView
                            style="@style/StringTextView"
                            android:id="@+id/string__ID"
                            android:text="@string/id"/>

                    <TextView
                            style="@style/TextView"
                            android:id="@+id/textView__ID"
                            android:layout_weight="1"
                            android:layout_width="0dp"/>
                </LinearLayout>

                <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:orientation="horizontal">

                    <TextView
                            style="@style/StringTextView"
                            android:id="@+id/string_exec_times"
                            android:text="@string/exec_times"/>

                    <TextView
                            style="@style/TextView"
                            android:id="@+id/textView_exec_times"
                            android:layout_weight="1"
                            android:layout_width="0dp"/>
                </LinearLayout>

            </LinearLayout>

            <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:orientation="horizontal">

                    <TextView
                            style="@style/StringTextView"
                            android:id="@+id/string_set_time"
                            android:text="@string/set_date"/>

                    <TextView
                            style="@style/StringTextView"
                            android:id="@+id/textView_set_time"
                            android:layout_weight="1"
                            android:layout_width="0dp"/>
                </LinearLayout>

                <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:orientation="horizontal">

                    <TextView
                            style="@style/StringTextView"
                            android:id="@+id/string_next_exec_time"
                            android:text="@string/next_exec_time"/>

                    <TextView
                            style="@style/StringTextView"
                            android:id="@+id/textView_next_exec_time"
                            android:layout_weight="1"
                            android:layout_width="0dp"/>


                </LinearLayout>

            </LinearLayout>


            <!--android:layout_alignBottom="@+id/string_exec_times"-->
            <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                <TextView
                        style="@style/StringTextView"
                        android:id="@+id/string_content"
                        android:text="@string/content"
                        />

                <TextView
                        style="@style/TextView"
                        android:id="@+id/textView_content"
                        android:layout_weight="1"/>
            </LinearLayout>

        </LinearLayout>
    </android.support.v7.widget.CardView>

</FrameLayout>